@@ -1,4 +1,5 @@
 0.3-1
+- change to monitor=FALSE for all reading functions
 - add longitude() and latitude()
 - add salinity(), temperature, and pressure()
 - add time() and velocity()
